final test run and fixing syntax

--- a/shazam_scraper.ipynb
+++ b/shazam_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "9dd66679-3bbe-453f-895a-bd100358296f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "65516fdb-d5c4-47aa-83e9-9bad176bb148",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        " '200. Outfit by Lil Baby & 21 Savage. Partial url: /song/1786672873/outfit']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "77f94757-6239-43b5-8189-8f1883e9134e",
    "metadata": {},
    "outputs": [
@@ -285,207 +285,207 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing 1: ANXIETY (feat. Doechii)\n",
-      "Processing 2: luther\n",
-      "Processing 3: NOKIA\n",
-      "Processing 4: Messy\n",
-      "Processing 5: Anxiety\n",
-      "Processing 6: APT.\n",
-      "Processing 7: Die With A Smile\n",
-      "Processing 8: Ordinary\n",
-      "Processing 9: DENIAL IS A RIVER\n",
-      "Processing 10: 30 For 30 (with Kendrick Lamar)\n",
-      "Processing 11: ACTIN UP\n",
-      "Processing 12: Timeless\n",
-      "Processing 13: SOMEBODY LOVES ME\n",
-      "Processing 14: That’s So True\n",
-      "Processing 15: Pink Pony Club\n",
-      "Processing 16: Beautiful Things\n",
-      "Processing 17: Proud Of Me\n",
-      "Processing 18: tv off (feat. Lefty Gunplay)\n",
-      "Processing 19: Lose Control\n",
-      "Processing 20: Scared (Sped Up)\n",
-      "Processing 21: Somebody That I Used to Know (feat. Kimbra)\n",
-      "Processing 22: GIMME A HUG\n",
-      "Processing 23: ME JALO\n",
-      "Processing 24: when the party's over\n",
-      "Processing 25: Not Like Us\n",
-      "Processing 26: Bad Dreams\n",
-      "Processing 27: Headlock\n",
-      "Processing 28: Where Do We Go From Here (feat. Menahan Street Band)\n",
-      "Processing 29: Love Somebody\n",
-      "Processing 30: Spitting Off the Edge of the World (feat. Perfume Genius)\n",
-      "Processing 31: Sailor Song\n",
-      "Processing 32: Cry For Me\n",
-      "Processing 33: Abracadabra\n",
-      "Processing 34: WHIM WHAMIEE\n",
-      "Processing 35: Staring at the Sun\n",
-      "Processing 36: Stargazing\n",
-      "Processing 37: squabble up\n",
-      "Processing 38: BIRDS OF A FEATHER\n",
-      "Processing 39: DtMF\n",
-      "Processing 40: A Bar Song (Tipsy)\n",
-      "Processing 41: Sports car\n",
-      "Processing 42: BMF\n",
-      "Processing 43: 1 AM\n",
-      "Processing 44: Stand By Me (Live at The Print Shop)\n",
-      "Processing 45: Trap Queen\n",
-      "Processing 46: MUTT (REMIX)\n",
-      "Processing 47: Let's Groove\n",
-      "Processing 48: Residuals\n",
-      "Processing 49: I Never Lie\n",
-      "Processing 50: Are You Even Real\n",
-      "Processing 51: Fire Woman\n",
-      "Processing 52: Little Things\n",
-      "Processing 53: Te Quería Ver\n",
-      "Processing 54: Too Sweet\n",
-      "Processing 55: I'm The Problem\n",
-      "Processing 56: We Are The People\n",
-      "Processing 57: Fat Juicy & Wet\n",
-      "Processing 58: Loco\n",
-      "Processing 59: The Days (NOTION Remix)\n",
-      "Processing 60: Use Somebody\n",
-      "Processing 61: Bad Bih 4 Ya (feat. Boston Richey)\n",
-      "Processing 62: El Mayor De Los Ranas\n",
-      "Processing 63: High Road\n",
-      "Processing 64: Forever Ever (feat. Young Thug & Reese LAFLARE)\n",
-      "Processing 65: Bed Chem\n",
-      "Processing 66: Good News\n",
-      "Processing 67: Good Luck, Babe!\n",
-      "Processing 68: Boots on the Ground\n",
-      "Processing 69: I Had Some Help (feat. Morgan Wallen)\n",
-      "Processing 70: En Privado\n",
-      "Processing 71: No One Noticed\n",
-      "Processing 72: Tweaker\n",
-      "Processing 73: Champagne Coast (feat. Blood Orange)\n",
-      "Processing 74: Another Day In Paradise\n",
-      "Processing 75: BAILE INoLVIDABLE\n",
-      "Processing 76: Liar\n",
-      "Processing 77: We Hug Now\n",
-      "Processing 78: Ain't I (feat. Young Dro & T.I.)\n",
-      "Processing 79: PUSH 2 START\n",
-      "Processing 80: She Will\n",
-      "Processing 81: DIE TRYING\n",
-      "Processing 82: Get Jiggy\n",
-      "Processing 83: NUEVAYoL\n",
-      "Processing 84: The Largest\n",
-      "Processing 85: Sorry I'm Here For Someone Else\n",
-      "Processing 86: Your Love\n",
-      "Processing 87: มันแปลกดีนะ\n",
-      "Processing 88: Gata Only\n",
-      "Processing 89: peekaboo (feat. AzChike)\n",
-      "Processing 90: Espresso\n",
-      "Processing 91: Heart Of A Woman\n",
-      "Processing 92: I'm Gonna Love You\n",
-      "Processing 93: Mi Vida Mi Muerte\n",
-      "Processing 94: Show Me Love\n",
-      "Processing 95: TATTOO\n",
-      "Processing 96: All The Stars\n",
-      "Processing 97: One Last Breath\n",
-      "Processing 98: Morena\n",
-      "Processing 99: Twerkin Wit Ya Friends\n",
-      "Processing 100: Beanie\n",
-      "Processing 101: Smells Like Teen Spirit\n",
-      "Processing 102: Like Him (feat. Lola Young)\n",
-      "Processing 103: Memories\n",
-      "Processing 104: MUTT\n",
-      "Processing 105: Hard Fought Hallelujah\n",
-      "Processing 106: TWENTIES\n",
-      "Processing 107: ILBB2 (feat. GloRilla)\n",
-      "Processing 108: worst behaviour (feat. Kehlani)\n",
-      "Processing 109: Lovehate Thing (feat. Sam Dew)\n",
-      "Processing 110: Tokicha\n",
-      "Processing 111: WILDFLOWER\n",
-      "Processing 112: Iris\n",
-      "Processing 113: Dum, Dumb, and Dumber\n",
-      "Processing 114: 'Bout It\n",
-      "Processing 115: SOS (Sex on Sight)\n",
-      "Processing 116: Bing Bong\n",
-      "Processing 117: No Pole\n",
-      "Processing 118: The Door\n",
-      "Processing 119: Let Me Know (feat. Future)\n",
-      "Processing 120: Tom Tom\n",
-      "Processing 121: WHATCHU KNO ABOUT ME\n",
-      "Processing 122: Indigo\n",
-      "Processing 123: Azul\n",
-      "Processing 124: cLOUDs\n",
-      "Processing 125: 4X4\n",
-      "Processing 126: What's Up?\n",
-      "Processing 127: Worst Way\n",
-      "Processing 128: I Can't Make You Love Me\n",
-      "Processing 129: Bitter Sweet Symphony\n",
-      "Processing 130: 요단강\n",
-      "Processing 131: Careless Whisper\n",
-      "Processing 132: weren't for the wind\n",
-      "Processing 133: Feel It (From The Original Series “Invincible”)\n",
-      "Processing 134: HIM ALL ALONG\n",
-      "Processing 135: Knockin' on Heaven's Door (Heretic Original Soundtrack)\n",
-      "Processing 136: Here We Go (Uh Oh)\n",
-      "Processing 137: Sparks\n",
-      "Processing 138: EoO\n",
-      "Processing 139: PA QUE LO BAILES\n",
-      "Processing 140: For a Day Like Today\n",
-      "Processing 141: you look like you love me\n",
-      "Processing 142: BUSS AT YOU\n",
-      "Processing 143: Si Antes Te Hubiera Conocido\n",
-      "Processing 144: i\n",
-      "Processing 145: Am I Okay?\n",
-      "Processing 146: Texas\n",
-      "Processing 147: Amor\n",
-      "Processing 148: Da Problem Solva\n",
-      "Processing 149: can't slow down\n",
-      "Processing 150: Bad (feat. Tiara Thomas)\n",
-      "Processing 151: Taste\n",
-      "Processing 152: Don't Stop Believin'\n",
-      "Processing 153: La Plena (W Sound 05)\n",
-      "Processing 154: Dreams\n",
-      "Processing 155: Love Me Not\n",
-      "Processing 156: Everybody Wants To Rule The World\n",
-      "Processing 157: Walking On A Dream\n",
-      "Processing 158: Take On Me\n",
-      "Processing 159: Doot Doot (6 7)\n",
-      "Processing 160: Since U Been Gone\n",
-      "Processing 161: Every Breath You Take\n",
-      "Processing 162: Ride Or Die, Pt. 2 (feat. Villano Antillano & Tokischa)\n",
-      "Processing 163: Mr. Brightside\n",
-      "Processing 164: chess (slowed)\n",
-      "Processing 165: Return of the Mack\n",
-      "Processing 166: Like That\n",
-      "Processing 167: Kids\n",
-      "Processing 168: How You Remind Me\n",
-      "Processing 169: Unchained Melody\n",
-      "Processing 170: Help Me\n",
-      "Processing 171: Bring Me to Life\n",
-      "Processing 172: Siesta Freestyle\n",
-      "Processing 173: Three Six Five\n",
-      "Processing 174: Superpowers\n",
-      "Processing 175: Sticky (feat. GloRilla, Sexyy Red & Lil Wayne)\n",
-      "Processing 176: Hey Abanibee\n",
-      "Processing 177: Yeah! (feat. Lil Jon & Ludacris)\n",
-      "Processing 178: Don't Dream It's Over\n",
-      "Processing 179: El Mayor de los Ranas (En Vivo)\n",
-      "Processing 180: Austin (Boots Stop Workin')\n",
-      "Processing 181: Giannis\n",
-      "Processing 182: Call Me When You Break Up\n",
-      "Processing 183: Until I Found You (Em Beihold Version)\n",
-      "Processing 184: Have You Ever Seen The Rain\n",
-      "Processing 185: RED HAIR\n",
-      "Processing 186: Family Affair\n",
-      "Processing 187: Calm Down\n",
-      "Processing 188: Mo Chicken (feat. French Montana)\n",
-      "Processing 189: Born Again (feat. Doja Cat & RAYE)\n",
-      "Processing 190: Stereo Love\n",
-      "Processing 191: MILLION DOLLAR BABY (VHS)\n",
-      "Processing 192: Yo Soy Tu Maestro\n",
-      "Processing 193: El Gigante De Hierro\n",
-      "Processing 194: Fade into You\n",
-      "Processing 195: Agora Hills\n",
-      "Processing 196: Sweet Child O' Mine\n",
-      "Processing 197: Everybody Loves The Sunshine\n",
-      "Processing 198: we can't be friends (wait for your love)\n",
-      "Processing 199: Friends Like That (feat. Jason Aldean)\n",
-      "Processing 200: Outfit\n",
-      "Done! Check songs.csv for results.\n"
+      "Scraping 1: ANXIETY (feat. Doechii)\n",
+      "Scraping 2: luther\n",
+      "Scraping 3: NOKIA\n",
+      "Scraping 4: Messy\n",
+      "Scraping 5: Anxiety\n",
+      "Scraping 6: APT.\n",
+      "Scraping 7: Die With A Smile\n",
+      "Scraping 8: Ordinary\n",
+      "Scraping 9: DENIAL IS A RIVER\n",
+      "Scraping 10: 30 For 30 (with Kendrick Lamar)\n",
+      "Scraping 11: ACTIN UP\n",
+      "Scraping 12: Timeless\n",
+      "Scraping 13: SOMEBODY LOVES ME\n",
+      "Scraping 14: That’s So True\n",
+      "Scraping 15: Pink Pony Club\n",
+      "Scraping 16: Beautiful Things\n",
+      "Scraping 17: Proud Of Me\n",
+      "Scraping 18: tv off (feat. Lefty Gunplay)\n",
+      "Scraping 19: Lose Control\n",
+      "Scraping 20: Scared (Sped Up)\n",
+      "Scraping 21: Somebody That I Used to Know (feat. Kimbra)\n",
+      "Scraping 22: GIMME A HUG\n",
+      "Scraping 23: ME JALO\n",
+      "Scraping 24: when the party's over\n",
+      "Scraping 25: Not Like Us\n",
+      "Scraping 26: Bad Dreams\n",
+      "Scraping 27: Headlock\n",
+      "Scraping 28: Where Do We Go From Here (feat. Menahan Street Band)\n",
+      "Scraping 29: Love Somebody\n",
+      "Scraping 30: Spitting Off the Edge of the World (feat. Perfume Genius)\n",
+      "Scraping 31: Sailor Song\n",
+      "Scraping 32: Cry For Me\n",
+      "Scraping 33: Abracadabra\n",
+      "Scraping 34: WHIM WHAMIEE\n",
+      "Scraping 35: Staring at the Sun\n",
+      "Scraping 36: Stargazing\n",
+      "Scraping 37: squabble up\n",
+      "Scraping 38: BIRDS OF A FEATHER\n",
+      "Scraping 39: DtMF\n",
+      "Scraping 40: A Bar Song (Tipsy)\n",
+      "Scraping 41: Sports car\n",
+      "Scraping 42: BMF\n",
+      "Scraping 43: 1 AM\n",
+      "Scraping 44: Stand By Me (Live at The Print Shop)\n",
+      "Scraping 45: Trap Queen\n",
+      "Scraping 46: MUTT (REMIX)\n",
+      "Scraping 47: Let's Groove\n",
+      "Scraping 48: Residuals\n",
+      "Scraping 49: I Never Lie\n",
+      "Scraping 50: Are You Even Real\n",
+      "Scraping 51: Fire Woman\n",
+      "Scraping 52: Little Things\n",
+      "Scraping 53: Te Quería Ver\n",
+      "Scraping 54: Too Sweet\n",
+      "Scraping 55: I'm The Problem\n",
+      "Scraping 56: We Are The People\n",
+      "Scraping 57: Fat Juicy & Wet\n",
+      "Scraping 58: Loco\n",
+      "Scraping 59: The Days (NOTION Remix)\n",
+      "Scraping 60: Use Somebody\n",
+      "Scraping 61: Bad Bih 4 Ya (feat. Boston Richey)\n",
+      "Scraping 62: El Mayor De Los Ranas\n",
+      "Scraping 63: High Road\n",
+      "Scraping 64: Forever Ever (feat. Young Thug & Reese LAFLARE)\n",
+      "Scraping 65: Bed Chem\n",
+      "Scraping 66: Good News\n",
+      "Scraping 67: Good Luck, Babe!\n",
+      "Scraping 68: Boots on the Ground\n",
+      "Scraping 69: I Had Some Help (feat. Morgan Wallen)\n",
+      "Scraping 70: En Privado\n",
+      "Scraping 71: No One Noticed\n",
+      "Scraping 72: Tweaker\n",
+      "Scraping 73: Champagne Coast (feat. Blood Orange)\n",
+      "Scraping 74: Another Day In Paradise\n",
+      "Scraping 75: BAILE INoLVIDABLE\n",
+      "Scraping 76: Liar\n",
+      "Scraping 77: We Hug Now\n",
+      "Scraping 78: Ain't I (feat. Young Dro & T.I.)\n",
+      "Scraping 79: PUSH 2 START\n",
+      "Scraping 80: She Will\n",
+      "Scraping 81: DIE TRYING\n",
+      "Scraping 82: Get Jiggy\n",
+      "Scraping 83: NUEVAYoL\n",
+      "Scraping 84: The Largest\n",
+      "Scraping 85: Sorry I'm Here For Someone Else\n",
+      "Scraping 86: Your Love\n",
+      "Scraping 87: มันแปลกดีนะ\n",
+      "Scraping 88: Gata Only\n",
+      "Scraping 89: peekaboo (feat. AzChike)\n",
+      "Scraping 90: Espresso\n",
+      "Scraping 91: Heart Of A Woman\n",
+      "Scraping 92: I'm Gonna Love You\n",
+      "Scraping 93: Mi Vida Mi Muerte\n",
+      "Scraping 94: Show Me Love\n",
+      "Scraping 95: TATTOO\n",
+      "Scraping 96: All The Stars\n",
+      "Scraping 97: One Last Breath\n",
+      "Scraping 98: Morena\n",
+      "Scraping 99: Twerkin Wit Ya Friends\n",
+      "Scraping 100: Beanie\n",
+      "Scraping 101: Smells Like Teen Spirit\n",
+      "Scraping 102: Like Him (feat. Lola Young)\n",
+      "Scraping 103: Memories\n",
+      "Scraping 104: MUTT\n",
+      "Scraping 105: Hard Fought Hallelujah\n",
+      "Scraping 106: TWENTIES\n",
+      "Scraping 107: ILBB2 (feat. GloRilla)\n",
+      "Scraping 108: worst behaviour (feat. Kehlani)\n",
+      "Scraping 109: Lovehate Thing (feat. Sam Dew)\n",
+      "Scraping 110: Tokicha\n",
+      "Scraping 111: WILDFLOWER\n",
+      "Scraping 112: Iris\n",
+      "Scraping 113: Dum, Dumb, and Dumber\n",
+      "Scraping 114: 'Bout It\n",
+      "Scraping 115: SOS (Sex on Sight)\n",
+      "Scraping 116: Bing Bong\n",
+      "Scraping 117: No Pole\n",
+      "Scraping 118: The Door\n",
+      "Scraping 119: Let Me Know (feat. Future)\n",
+      "Scraping 120: Tom Tom\n",
+      "Scraping 121: WHATCHU KNO ABOUT ME\n",
+      "Scraping 122: Indigo\n",
+      "Scraping 123: Azul\n",
+      "Scraping 124: cLOUDs\n",
+      "Scraping 125: 4X4\n",
+      "Scraping 126: What's Up?\n",
+      "Scraping 127: Worst Way\n",
+      "Scraping 128: I Can't Make You Love Me\n",
+      "Scraping 129: Bitter Sweet Symphony\n",
+      "Scraping 130: 요단강\n",
+      "Scraping 131: Careless Whisper\n",
+      "Scraping 132: weren't for the wind\n",
+      "Scraping 133: Feel It (From The Original Series “Invincible”)\n",
+      "Scraping 134: HIM ALL ALONG\n",
+      "Scraping 135: Knockin' on Heaven's Door (Heretic Original Soundtrack)\n",
+      "Scraping 136: Here We Go (Uh Oh)\n",
+      "Scraping 137: Sparks\n",
+      "Scraping 138: EoO\n",
+      "Scraping 139: PA QUE LO BAILES\n",
+      "Scraping 140: For a Day Like Today\n",
+      "Scraping 141: you look like you love me\n",
+      "Scraping 142: BUSS AT YOU\n",
+      "Scraping 143: Si Antes Te Hubiera Conocido\n",
+      "Scraping 144: i\n",
+      "Scraping 145: Am I Okay?\n",
+      "Scraping 146: Texas\n",
+      "Scraping 147: Amor\n",
+      "Scraping 148: Da Problem Solva\n",
+      "Scraping 149: can't slow down\n",
+      "Scraping 150: Bad (feat. Tiara Thomas)\n",
+      "Scraping 151: Taste\n",
+      "Scraping 152: Don't Stop Believin'\n",
+      "Scraping 153: La Plena (W Sound 05)\n",
+      "Scraping 154: Dreams\n",
+      "Scraping 155: Love Me Not\n",
+      "Scraping 156: Everybody Wants To Rule The World\n",
+      "Scraping 157: Walking On A Dream\n",
+      "Scraping 158: Take On Me\n",
+      "Scraping 159: Doot Doot (6 7)\n",
+      "Scraping 160: Since U Been Gone\n",
+      "Scraping 161: Every Breath You Take\n",
+      "Scraping 162: Ride Or Die, Pt. 2 (feat. Villano Antillano & Tokischa)\n",
+      "Scraping 163: Mr. Brightside\n",
+      "Scraping 164: chess (slowed)\n",
+      "Scraping 165: Return of the Mack\n",
+      "Scraping 166: Like That\n",
+      "Scraping 167: Kids\n",
+      "Scraping 168: How You Remind Me\n",
+      "Scraping 169: Unchained Melody\n",
+      "Scraping 170: Help Me\n",
+      "Scraping 171: Bring Me to Life\n",
+      "Scraping 172: Siesta Freestyle\n",
+      "Scraping 173: Three Six Five\n",
+      "Scraping 174: Superpowers\n",
+      "Scraping 175: Sticky (feat. GloRilla, Sexyy Red & Lil Wayne)\n",
+      "Scraping 176: Hey Abanibee\n",
+      "Scraping 177: Yeah! (feat. Lil Jon & Ludacris)\n",
+      "Scraping 178: Don't Dream It's Over\n",
+      "Scraping 179: El Mayor de los Ranas (En Vivo)\n",
+      "Scraping 180: Austin (Boots Stop Workin')\n",
+      "Scraping 181: Giannis\n",
+      "Scraping 182: Call Me When You Break Up\n",
+      "Scraping 183: Until I Found You (Em Beihold Version)\n",
+      "Scraping 184: Have You Ever Seen The Rain\n",
+      "Scraping 185: RED HAIR\n",
+      "Scraping 186: Family Affair\n",
+      "Scraping 187: Calm Down\n",
+      "Scraping 188: Mo Chicken (feat. French Montana)\n",
+      "Scraping 189: Born Again (feat. Doja Cat & RAYE)\n",
+      "Scraping 190: Stereo Love\n",
+      "Scraping 191: MILLION DOLLAR BABY (VHS)\n",
+      "Scraping 192: Yo Soy Tu Maestro\n",
+      "Scraping 193: El Gigante De Hierro\n",
+      "Scraping 194: Fade into You\n",
+      "Scraping 195: Agora Hills\n",
+      "Scraping 196: Sweet Child O' Mine\n",
+      "Scraping 197: Everybody Loves The Sunshine\n",
+      "Scraping 198: we can't be friends (wait for your love)\n",
+      "Scraping 199: Friends Like That (feat. Jason Aldean)\n",
+      "Scraping 200: Outfit\n",
+      "Finished scraping. Check songs.csv for results.\n"
      ]
     }
    ],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "f0ec42c4-23b7-4f19-a806-38b3679e69d2",
    "metadata": {},
    "outputs": [
@@ -655,14 +655,6 @@
     "# run the function\n",
     "create_sectioned_text_file()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8d2ebcd-1061-4392-9b86-3a873787f406",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
